<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remember me?</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_button">Remember Something New</string>
    <string name="add">add</string>
    <string name="add_picture">Add Picture</string>
    <string name="Title">Item</string>
    <string name="title">What do you want to remember?</string>
    <string name="intro">Please enter what you want to remember and take a picture.</string>

</resources>