<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/newButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imgPreview"
        android:layout_marginTop="42dp"
        android:text="@string/new_button" />

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="160dp"
        android:layout_height="185dp"
        android:layout_below="@+id/user_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:paddingLeft="25dp"
        android:text="@string/intro"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignRight="@+id/imgPreview"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:hint="@string/title"
        android:singleLine="true"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="60dp"
        android:text="@string/Title"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/user_input"
        android:layout_toRightOf="@+id/user_input"
        android:text="@string/add_picture"
        android:textSize="12sp" />

</RelativeLayout>